# 24-25Fall_Program_Design_Practice

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
config/: db_config.h
docs/: DEVELOPMENT.md  database.md  dev.md
include/: administrator.h  data.h  entities.h  login.h  student.h  teacher.h
include/controllers/: auth_controller.h  classroom_controller.h  grade_controller.h  login.h  login_controller.h  notification_controller.h  student_controller.h  teacher_controller.h
include/models/: administrator.h  classroom.h  course_schedule.h  course_schedule_selection.h  grade.h  notification.h  student.h  teacher.h  timetable.h
include/utils/: display.h  seed.h
include/views/: administrator.h  administrator_view.h  classroom_view.h  login.h  login_view.h  student.h  student_view.h  teacher.h  teacher_view.h
sql/: data.sql  schema.sql
src/: administrator.c  data.c  login.c  main.c  student.c  teacher.c  test.txt
src/controllers/: auth_controller.c  auth_controller.h  classroom_controller.c  classroom_controller.h  course_selection_controller.h  grade_controller.c  grade_controller.h  hello.c  hello.h  import_controller.h  login.c  login_controller.c  notification_controller.c  notification_controller.h  schedule.c  schedule.h  schedule_controller.c  schedule_controller.h  student_controller.c  teacher_controller.c
src/database/: database.c  database.h
src/models/: administrator.c  classroom.c  classroom.h  course.h  course_schedule.c  course_schedule.h  course_schedule_selection.c  grade.c  grade.h  notification.c  notification.h  student.c  student.h  teacher.c  teacher.h  user.c  user.h
src/utils/: display.c  seed.c
src/views/: administrator.c  administrator_view.c  classroom_view.c  login.c  login_view.c  login_view.h  student.c  student_view.c  teacher.c  teacher_view.c
tests/: test_administrator.c  test_grade.c  test_notification.c  test_runner.c  test_student.c  test_teacher.c
